[package]
name = "usd-price-token-sale"
version = "0.1.0"
authors = [ "mbolog.alex@gmail.com",]
edition = "2018"
publish = false

[lib]
path = "src/empty.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.39.5"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.5"
